@@ -158,6 +158,7 @@ SCIP_RETCODE SCIPpropExec(
    SCIP_STAT*            stat,               /**< dynamic problem statistics */
    int                   depth,              /**< depth of current node */
    SCIP_Bool             execdelayed,        /**< execute propagator even if it is marked to be delayed */
+   SCIP_PROPTIMING       proptiming,         /**< current point in the node solving process */
    SCIP_RESULT*          result              /**< pointer to store the result of the callback method */
    );
 
